syntax = "proto3";
option java_multiple_files = true;
package org.rizki.mufrizal.grpc.microservice.domain;

message SystemParameterProto {
  string paramName = 1;
  string description = 2;
  string paramValue = 3;
}